blacklist/ ignore implementation

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -33,7 +33,8 @@ webservice_request_folder_leave.icon=icons/PowerFolder.gif
 remove_from_recycle_bin.icon=icons/Delete.gif
 join_by_invitation.icon=icons/toolbar/Invitation-48.png
 wizard.icon=icons/toolbar/Wizard-48.png
-donotdownloadfile.icon=icons/Forbid.gif
+ignorefile.icon=icons/Forbid.gif
+unignorefile.icon=icons/UnForbid.gif
 abortcopy.icon=icons/Forbid.gif
 folderjoin.dialog.icon=icons/FolderAction.gif
 showhidefiledetails.icon=icons/Properties.gif
