--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -21,6 +21,18 @@ abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
 
+folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
+folderpanel.settingstab.addbutton.key=A
+folderpanel.settingstab.addbutton.name=Add
+
+folderpanel.settingstab.editbutton.description=Edit a pattern
+folderpanel.settingstab.editbutton.key=E
+folderpanel.settingstab.editbutton.name=Edit
+
+folderpanel.settingstab.removebutton.description=Remove a pattern
+folderpanel.settingstab.removebutton.key=R
+folderpanel.settingstab.removebutton.name=Remove
+
 abortdownload.description=Aborts the selected downloads and removed them from the download queue
 abortdownload.key=a
 abortdownload.name=Abort
@@ -133,10 +145,6 @@ disablesilentmode.description=Siletmode currently active, added/modified files w
 disablesilentmode.key=w
 disablesilentmode.name=Wakeup\!
 
-donotdownloadfile.description=Mark this file as "do not download on auto-download synchronization profiles"
-donotdownloadfile.key=D
-donotdownloadfile.name=Do Not Automaticaly Download
-
 downloadfile.description=Download selected file(s) (or files in directory). Deleted files will be re-downloaded
 downloadfile.failed.sourcenotfound=Unable to download file {0}, source not found
 downloadfile.key=D
@@ -163,7 +171,7 @@ filecopier.progressdialog.title=Copy files progress
 fileinfo.availability=Availability
 fileinfo.available=Available
 fileinfo.deleted=Deleted
-fileinfo.donotautodownload=Do not auto download
+fileinfo.ignore=This file is excluded from synchronization
 fileinfo.downloading=Downloading
 fileinfo.downloading_from_member=Downloading from {0}
 fileinfo.expected=Expected
@@ -273,6 +281,9 @@ folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+a
 folderpanel.hometab.total_size=Total size
 folderpanel.hometab.total_synchronisation_percentage=Total synchronisation percentage
 
+folderpanel.settingstab.ignorepatterns=Ignore patterns
+folderpanel.settingstab.title=Settings
+
 folderrepository.warnonclose.neveraskagain=Never ask this again. 
 folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 folderrepository.warnonclose.title=Continue Exit?
@@ -335,6 +346,11 @@ general.uploads=Uploads
 general.user=User
 general.visibility=Visibility
 general.yesterday=yesterday
+
+ignorefile.description=File(s) will not be downloaded/shared 
+ignorefile.key=I
+ignorefile.name=Add file to Ignore
+
 
 imagefileinfo.resolution=Resolution
 imagefileinfo.unknown=Unknown 
@@ -709,6 +725,10 @@ transfers.queued=queued
 transfers.requested=requested
 transfers.searching=Searching...
 transfers.to=To
+
+unignorefile.description=File(s) will be downloaded/shared again
+unignorefile.key=U
+unignorefile.name=Remove from Ignore
 
 webservice_request_folder_join.description=Requests the PowerFolder service to join this folder
 webservice_request_folder_join.key=w
