i18n and correct refresh of data after switch of folders

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -33,6 +33,13 @@ folderpanel.settingstab.removebutton.description=Remove a pattern
 folderpanel.settingstab.removebutton.key=R
 folderpanel.settingstab.removebutton.name=Remove
 
+folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
+folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
+folderpanel.settingstab.add_a_pattern.example=example/*.jpg
+
+folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
+folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
+
 abortdownload.description=Aborts the selected downloads and removed them from the download queue
 abortdownload.key=a
 abortdownload.name=Abort
@@ -319,6 +326,7 @@ general.foldername=Name
 general.friendlist=Friendlist
 general.from=from
 general.hide=hide
+general.help=help
 general.inet=i-net
 general.localcopyat=Local copy at
 general.localcopyplace=Choose a place for local copy
