--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -822,3 +822,7 @@ recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
 recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
 preferences.dialog.showadvanced=Show Advanced Preferences
+
+createshortcut.name=Create desktop shortcut
+createshortcut.description=Creates a shortcut to this folder on your desktop
+createshortcut.key=C
