--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -260,15 +260,16 @@ folderjoin.secret=Secret
 folderjoin.warning.notempty.text=The directory for the local copy of folder '{0}' is not empty.\nAll files contained there will be uploaded to its members.\nAre you sure you want to place the local copy of this folder at\n'{1}' ?
 folderjoin.warning.notempty.title=Local base directory not empty
 
-folderjoinleave.description=Joins or leaves a Folder
+folderjoinleave.description=Joins or leaves a folder
 folderjoinleave.join=Join folder
 folderjoinleave.key=f
 folderjoinleave.leave=Leave folder
 folderjoinleave.name=Join folder
 
-folderleave.description=Leave this Folder (Stop Sharing and downloading data)
+folderleave.description=Leave this folder (Stop Sharing and downloading data)
+folderleave.dialog.sync_warning=The folder is currently synchronizing!
 folderleave.dialog.text=Leave folder {0} ?
-folderleave.dialog.title=Leave Folder {0} ?
+folderleave.dialog.title=Leave folder {0} ?
 folderleave.key=L
 folderleave.name=Leave folder
 
