remove/restore files in background thread visualization worker, some minor TODOs cleared.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -107,6 +107,8 @@ delete_confimation.text_movetorecyclebin=Are you sure you want to move the follo
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
 delete_confimation.text_movetorecyclebin_directory=Are you sure you want to move the following file(s) and\nor directories (including subdirectories and the files) to\nthe PowerFolder Recycle Bin?
 delete_confimation.title=Delete files?
+delete_confimation.busy.title=Deleting file(s)
+delete_confimation.busy.description=Removing file(s)
 
 deletefile.description=Delete selected file(s)
 deletefile.key=F
@@ -637,6 +639,9 @@ requestnetfolderlist.name=Refresh List
 restorefile.description=Undelete file
 restorefile.key=r
 restorefile.name=Restore file
+
+restore.busy.title=Restoring file(s)
+restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
 
 rootpanel.connected_users=Connected users
 rootpanel.friends=Friends
