--- a/build-local.properties.sample
+++ b/build-local.properties.sample
@@ -33,3 +33,6 @@ InstallerFilesLocation=<location of powerfolder checkout>
 #
 # when generating javadoc generate documentation for public, protected, package, or private
 javadoc.access=private
+
+#set output/build dir, used as prefex before "build/"
+output.dir=c:\powerfolder\output
