--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -358,10 +358,13 @@ general.user=User
 general.visibility=Visibility
 general.yesterday=yesterday
 
+hideoffline.description=The offline users will be filtered from this search result 
+hideoffline.key=H
+hideoffline.name=Hide offline users
+
 ignorefile.description=File(s) will not be downloaded/shared 
 ignorefile.key=I
 ignorefile.name=Add file to Ignore
-
 
 imagefileinfo.resolution=Resolution
 imagefileinfo.unknown=Unknown 
