output dir made optional ...

--- a/build-local.properties.sample
+++ b/build-local.properties.sample
@@ -34,6 +34,6 @@ InstallerFilesLocation=<location of powerfolder checkout>
 # when generating javadoc generate documentation for public, protected, package, or private
 javadoc.access=private
 
-# set output/build dir
-output.dir=c:\powerfolder\output
+# optional set output/build dir
+#output.dir=c:\powerfolder\output
 #
