streamlined translation files

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -21,25 +21,6 @@ abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
 
-folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
-folderpanel.settingstab.addbutton.key=A
-folderpanel.settingstab.addbutton.name=Add
-
-folderpanel.settingstab.editbutton.description=Edit a pattern
-folderpanel.settingstab.editbutton.key=E
-folderpanel.settingstab.editbutton.name=Edit
-
-folderpanel.settingstab.removebutton.description=Remove a pattern
-folderpanel.settingstab.removebutton.key=R
-folderpanel.settingstab.removebutton.name=Remove
-
-folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
-folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
-folderpanel.settingstab.add_a_pattern.example=example/*.jpg
-
-folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
-folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
-
 abortdownload.description=Aborts the selected downloads and removed them from the download queue
 abortdownload.key=a
 abortdownload.name=Abort
@@ -102,13 +83,17 @@ connect.name=Connect
 
 console.updatecheck.new_developmentversion=------------ New development version downloaded ------------
 
+createshortcut.description=Creates a shortcut to this folder on your desktop
+createshortcut.key=C
+createshortcut.name=Create desktop shortcut
+
+delete_confimation.busy.description=Removing file(s)
+delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text=Are you sure you want to delete the following file(s)\:\n (Note that these files are really deleted from your system, not moved to the "Recycle Bin").
 delete_confimation.text_movetorecyclebin=Are you sure you want to move the following file(s) to the PowerFolder Recycle Bin?
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
 delete_confimation.text_movetorecyclebin_directory=Are you sure you want to move the following file(s) and\nor directories (including subdirectories and the files) to\nthe PowerFolder Recycle Bin?
 delete_confimation.title=Delete files?
-delete_confimation.busy.title=Deleting file(s)
-delete_confimation.busy.description=Removing file(s)
 
 deletefile.description=Delete selected file(s)
 deletefile.key=F
@@ -163,9 +148,8 @@ downloadfile.unable_to_download=Unable to download
 empty_recycle_bin.description=Empty the PowerFolder Recycle Bin
 empty_recycle_bin.key=E
 empty_recycle_bin.name=Empty Recycle Bin
-
-empty_recycle_bin.working.title=Emptying the Recycle Bin
 empty_recycle_bin.working.description=Deleting files
+empty_recycle_bin.working.title=Emptying the Recycle Bin
 
 empty_recycle_bin_confimation.text=Are your sure to want to empty the PowerFolder Recycle Bin?
 empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
@@ -180,11 +164,11 @@ filecopier.progressdialog.title=Copy files progress
 fileinfo.availability=Availability
 fileinfo.available=Available
 fileinfo.deleted=Deleted
-fileinfo.ignore=This file is excluded from synchronization
 fileinfo.downloading=Downloading
 fileinfo.downloading_from_member=Downloading from {0}
 fileinfo.expected=Expected
 fileinfo.header=File Details
+fileinfo.ignore=This file is excluded from synchronization
 fileinfo.location=Location
 fileinfo.modifiedby=Modified by
 fileinfo.modifieddate=Modified on
@@ -269,7 +253,7 @@ folderjoinleave.leave=Leave folder
 folderjoinleave.name=Join folder
 
 folderleave.description=Leave this folder (Stop Sharing and downloading data)
-folderleave.dialog.sync_warning=The folder is currently synchronizing!
+folderleave.dialog.sync_warning=The folder is currently synchronizing\!
 folderleave.dialog.text=Leave folder {0} ?
 folderleave.dialog.title=Leave folder {0} ?
 folderleave.key=L
@@ -289,8 +273,21 @@ folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+available)
 folderpanel.hometab.total_size=Total size
-
+folderpanel.settingstab.add_a_pattern.example=example/*.jpg
+folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
+folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
+folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
+folderpanel.settingstab.addbutton.key=A
+folderpanel.settingstab.addbutton.name=Add
+folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
+folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
+folderpanel.settingstab.editbutton.description=Edit a pattern
+folderpanel.settingstab.editbutton.key=E
+folderpanel.settingstab.editbutton.name=Edit
 folderpanel.settingstab.ignorepatterns=Ignore patterns
+folderpanel.settingstab.removebutton.description=Remove a pattern
+folderpanel.settingstab.removebutton.key=R
+folderpanel.settingstab.removebutton.name=Remove
 folderpanel.settingstab.title=Settings
 
 folderrepository.warnonclose.neveraskagain=Never ask this again. 
@@ -327,8 +324,8 @@ general.folder.secret=Private (requires invitation)
 general.foldername=Name
 general.friendlist=Friendlist
 general.from=from
-general.hide=hide
 general.help=help
+general.hide=hide
 general.inet=i-net
 general.localcopyat=Local copy at
 general.localcopyplace=Choose a place for local copy
@@ -518,6 +515,7 @@ preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filen
 preferences.dialog.dyndns=my (dynamic) DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 preferences.dialog.dyndns.title=DynDNS
+preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
 preferences.dialog.dyndnsCurrentIP=Current IP
 preferences.dialog.dyndnsHostname=Hostname
 preferences.dialog.dyndnsLoginPanel=Login
@@ -556,6 +554,7 @@ preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Some changes require to restart PowerFolder.\nDo you want to restart now ?\n 
 preferences.dialog.restarttitle=Restart requested
+preferences.dialog.showadvanced=Show Advanced Preferences
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
@@ -615,6 +614,12 @@ reconnect.description=Reconnects to this user now
 reconnect.key=r
 reconnect.name=Reconnect
 
+recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
+recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
+recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
+recyclebin.confirmation.overwrite.on.restore.title=Restore file, overwrite?
+recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
+
 remove_from_recycle_bin.description=Delete file from the PowerFolder Recycle Bin
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=Delete File
@@ -638,12 +643,12 @@ requestnetfolderlist.description=Refreshes the list of public folders
 requestnetfolderlist.key=r
 requestnetfolderlist.name=Refresh List
 
+restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
+restore.busy.title=Restoring file(s)
+
 restorefile.description=Undelete file
 restorefile.key=r
 restorefile.name=Restore file
-
-restore.busy.title=Restoring file(s)
-restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
 
 rootpanel.connected_users=Connected users
 rootpanel.friends=Friends
@@ -820,17 +825,3 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
-
-# Removed
-# preferences.dialog.dyndnsUpdateOnStart=Update on start
-preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
-recyclebin.confirmation.overwrite.on.restore.title=Restore file, overwrite?
-recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
-recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
-recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
-recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
-preferences.dialog.showadvanced=Show Advanced Preferences
-
-createshortcut.name=Create desktop shortcut
-createshortcut.description=Creates a shortcut to this folder on your desktop
-createshortcut.key=C
