- Extracted limitiy connection checker from nodemanager - Removed workerthread on nodemanager - Replaced apache threadpool through java5 executor

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -376,7 +376,7 @@ join_by_invitation.name=Load Invitation
 joinfolder.already_joined_text=You are already a member of folder {0}
 joinfolder.already_joined_title=Unable to join {0}
 
-limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our FAQ.\nhttp\://www.powerfolder.com
+limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limitedconnection.title=Limited connectivity
 
 linespeed.T1=T1 1.544mbit/s upload
