#330 added upload limit settings to preferences/wizard

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -379,20 +379,6 @@ joinfolder.already_joined_title=Unable to join {0}
 limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limitedconnection.title=Limited connectivity
 
-linespeed.T1=T1 1.544mbit/s upload
-linespeed.T3=T3 43.232mbit/s upload
-linespeed.adsl128=DSL 128Kbit upload
-linespeed.adsl256=DSL 256Kbit upload
-linespeed.adsl512=DSL 512Kbit upload
-linespeed.adsl768=DSL 768Kbit upload
-linespeed.customspeed=Custom line
-linespeed.isdnspeed128=ISDN 128Kbit
-linespeed.isdnspeed64=ISDN 64Kbit
-linespeed.lan10=LAN 10mbit/s upload
-linespeed.lan100=LAN 100mbit/s upload
-linespeed.lan1000=LAN 1000mbit/s upload
-linespeed.unlimited=Unlimited upload
-linespeed.uploadspeed=Upload limit
 
 linktoclipboard.description=Copies a clickable PowerFolder link to the clipboard, use to enable people to join this folder and download this file
 linktoclipboard.key=c
@@ -825,3 +811,19 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
+
+linespeed.T1=T1 xxx/ 1.544mbit
+linespeed.T3=T3 xxx/ 43.232mbit
+linespeed.adsl128=DSL xxx/ 128Kbit
+linespeed.adsl256=DSL xxx/ 256Kbit
+linespeed.adsl512=DSL xxx/ 512Kbit
+linespeed.adsl768=DSL xxx/ 768Kbit
+linespeed.customspeed=Custom line
+linespeed.isdnspeed128=ISDN xxx/ 128Kbit
+linespeed.isdnspeed64=ISDN xxx/ 64Kbit
+linespeed.lan10=LAN 10mbit/s
+linespeed.lan100=LAN 100mbit/s 
+linespeed.lan1000=LAN 1000mbit/s
+linespeed.unlimited=Unlimited traffic
+linespeed.uploadspeed=Upload limit
+linespeed.downloadspeed=Download limit
