--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -827,3 +827,6 @@ linespeed.lan1000=LAN 1000mbit/s
 linespeed.unlimited=Unlimited traffic
 linespeed.uploadspeed=Upload limit
 linespeed.downloadspeed=Download limit
+
+status.upload=UP: %.2f KB/s
+status.download=DOWN: %.2f KB/s
