--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -828,5 +828,5 @@ linespeed.unlimited=Unlimited traffic
 linespeed.uploadspeed=Upload limit
 linespeed.downloadspeed=Download limit
 
-status.upload=UP: %.2f KB/s
-status.download=DOWN: %.2f KB/s
+status.upload=Up: %.2f KB/s
+status.download=Down: %.2f KB/s
