--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -379,6 +379,21 @@ joinfolder.already_joined_title=Unable to join {0}
 limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limitedconnection.title=Limited connectivity
 
+linespeed.T1=T1 xxx/ 1.544mbit
+linespeed.T3=T3 xxx/ 43.232mbit
+linespeed.adsl128=DSL xxx/ 128Kbit
+linespeed.adsl256=DSL xxx/ 256Kbit
+linespeed.adsl512=DSL xxx/ 512Kbit
+linespeed.adsl768=DSL xxx/ 768Kbit
+linespeed.customspeed=Custom line
+linespeed.downloadspeed=Download limit
+linespeed.isdnspeed128=ISDN xxx/ 128Kbit
+linespeed.isdnspeed64=ISDN xxx/ 64Kbit
+linespeed.lan10=LAN 10mbit/s
+linespeed.lan100=LAN 100mbit/s 
+linespeed.lan1000=LAN 1000mbit/s
+linespeed.unlimited=Unlimited traffic
+linespeed.uploadspeed=Upload limit
 
 linktoclipboard.description=Copies a clickable PowerFolder link to the clipboard, use to enable people to join this folder and download this file
 linktoclipboard.key=c
@@ -688,6 +703,9 @@ startdownloads.description=Opens the selected, downloaded files
 startdownloads.key=s
 startdownloads.name=Open
 
+status.download=Down\: %.2f KB/s
+status.upload=Up\: %.2f KB/s
+
 synchronisation.notice.title=Activated synchronisation profile {0}
 synchronisation.warning.automatic_deletions=This mode will also synchronize file deletions\!\nContinue ?
 synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
@@ -811,22 +829,3 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
-
-linespeed.T1=T1 xxx/ 1.544mbit
-linespeed.T3=T3 xxx/ 43.232mbit
-linespeed.adsl128=DSL xxx/ 128Kbit
-linespeed.adsl256=DSL xxx/ 256Kbit
-linespeed.adsl512=DSL xxx/ 512Kbit
-linespeed.adsl768=DSL xxx/ 768Kbit
-linespeed.customspeed=Custom line
-linespeed.isdnspeed128=ISDN xxx/ 128Kbit
-linespeed.isdnspeed64=ISDN xxx/ 64Kbit
-linespeed.lan10=LAN 10mbit/s
-linespeed.lan100=LAN 100mbit/s 
-linespeed.lan1000=LAN 1000mbit/s
-linespeed.unlimited=Unlimited traffic
-linespeed.uploadspeed=Upload limit
-linespeed.downloadspeed=Download limit
-
-status.upload=Up: %.2f KB/s
-status.download=Down: %.2f KB/s
