--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -727,12 +727,12 @@ systray.hide=Hide
 systray.powerfolder=PowerFolder v{0}
 systray.show=Show
 systray.syncall=Sync Folders
-systray.tooltip.down=DOWN {0} KBs
-systray.tooltip.down.mb=DOWN {0} MBs
+systray.tooltip.down=Down {0} KBs
+systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.insync=InSync
 systray.tooltip.syncing=Syncing
-systray.tooltip.up=UP {0} KBs
-systray.tooltip.up.mb=UP {0} MBs
+systray.tooltip.up=Up {0} KBs
+systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=Friends
 title.my.folders=My Folders 
