more work for: #17 (still incomplete)

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -196,6 +196,8 @@ filelist.status.no_files_available_add_files_and_invite=No files available... ad
 filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
 filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
 
+filenameproblemhandler.solution=Solution
+
 findfriends.description=Start searching for new friends
 findfriends.key=F
 findfriends.name=Find new Friends
@@ -314,6 +316,7 @@ general.datawarning.0=Keep in mind
 general.datawarning.1=All files in folder will be shared.
 general.datawarning.2=Never share sensitive data\!
 general.days={0} days
+general.description=Description
 general.downloads=Downloads
 general.estimatedsize=Estimated size
 general.file=File
