--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@ For creation of the installer:
 	<description>
         Build PowerFolder.jar with ant
     </description>
-	
+
 	<target name="loadproperties0">
 		<!-- Load build-local.properties -->
 		<available property="build.local.properties.ok" file="build-local.properties" type="file" />
@@ -39,22 +39,22 @@ For creation of the installer:
 		</fail>
 		<property file="build-local.properties" />
 		<condition property="outputdirset">
-			<isset property="output.dir"/>
+			<isset property="output.dir" />
 		</condition>
 	</target>
-	
+
 	<!-- if output dir not set we use the default current dir -->
 	<target name="loadproperties" depends="loadproperties0" unless="outputdirset">
 		<property name="output.dir" location="" />
 	</target>
-	
+
 	<target name="init" description="setup and check" depends="loadproperties">
 		<!-- sets the standard DSTAMP, TSTAMP, and TODAY properties according to the default formats: -->
 		<tstamp>
 			<!--must match the format in AboutDialog2-->
 			<format property="BuildDateTime" pattern="MMMM/dd/yyyy hh:mm:ss a, z" />
-		</tstamp>		
-	   
+		</tstamp>
+
 		<!-- set global properties for this build -->
 		<property name="InstallerScriptName" value="script.nsi" />
 
@@ -67,22 +67,22 @@ For creation of the installer:
 		<property name="etc.dir" location="src/etc" />
 
 		<property name="src.test.dir" location="src/test" />
-		
+
 		<!-- External Libraries -->
 		<!--<filelist id="libs" dir="lib">
 		    <file name="commons-io-1.2.jar"/>
 		</filelist>-->
 		<fileset id="libs" dir="lib" casesensitive="yes">
-		    <include name="commons-io-1.2.jar"/>
-		    <include name="commons-lang-2.2.jar"/>
-		    <include name="commons-codec-1.3.jar"/>
-			<include name="commons-cli-1.0.jar"/>
-			
-			<include name="binding-1.1.2.jar"/>
-			<include name="forms-1.0.7.jar"/>
-			<include name="looks-2.0.4.jar"/>
-			<include name="uif_lite-2.0.4.jar"/>
-			<include name="validation-1.3.0.jar"/>
+			<include name="commons-io-1.2.jar" />
+			<include name="commons-lang-2.2.jar" />
+			<include name="commons-codec-1.3.jar" />
+			<include name="commons-cli-1.0.jar" />
+
+			<include name="binding-1.1.2.jar" />
+			<include name="forms-1.0.7.jar" />
+			<include name="looks-2.0.4.jar" />
+			<include name="uif_lite-2.0.4.jar" />
+			<include name="validation-1.3.0.jar" />
 		</fileset>
 
 		<!-- Output dirs -->
@@ -90,7 +90,7 @@ For creation of the installer:
 		<property name="build.test.dir" location="${output.dir}/test" />
 		<property name="build.reports.dir" location="${output.dir}/test-reports" />
 		<property name="dist.dir" location="${output.dir}/dist" />
-		<property name="javadoc.dir" location="${output.dir}/api-docs"/>
+		<property name="javadoc.dir" location="${output.dir}/api-docs" />
 
 		<property name="javadoc.packages" value="de.dal33t" />
 		<property name="javadoc.overview" location="${src.main.dir}/overview.html" />
@@ -98,17 +98,11 @@ For creation of the installer:
 		<!-- TODO Dirs need cleanups -->
 		<property name="junit.lib" location="lib/junit.jar" />
 	</target>
-	
+
 	<target name="compile" description="compile the source " depends="init">
 		<mkdir dir="${build.dir}" />
 
-		<javac destdir="${build.dir}"
-			source="1.5"
-			encoding="UTF-8"
-			nowarn="${NoCompileWarnings}"
-			debug="${Debug}"
-			deprecation="${Deprecation}"
-			optimize="${Optimize}">
+		<javac destdir="${build.dir}" source="1.5" encoding="UTF-8" nowarn="${NoCompileWarnings}" debug="${Debug}" deprecation="${Deprecation}" optimize="${Optimize}">
 
 			<!-- javac 1.5 specific warnings -->
 			<compilerarg value="-Xlint:${Unchecked}" />
@@ -116,7 +110,7 @@ For creation of the installer:
 
 			<classpath>
 				<pathelement path="${velocity}" />
-				<fileset refid="libs"/>
+				<fileset refid="libs" />
 			</classpath>
 
 			<src path="${main.src.dir}" />
@@ -162,7 +156,7 @@ For creation of the installer:
 				<attribute name="Sealed" value="true" />
 				<attribute name="Main-Class" value="de.dal33t.powerfolder.PowerFolder" />
 			</manifest>
-			<zipgroupfileset refid="libs"/>
+			<zipgroupfileset refid="libs" />
 		</jar>
 
 		<signjar jar="${dist.dir}\PowerFolder.jar" keystore="${KeystoreLocation}" storepass="${SignPassword}" alias="myKey" />
@@ -204,18 +198,14 @@ For creation of the installer:
 		<mkdir dir="${build.reports.dir}" />
 
 		<!-- Compile tests -->
-		<javac destdir="${build.dir}"
-			debug="${Debug}"
-			deprecation="false"
-			optimize="false"
-			failonerror="true"
-			encoding="UTF-8">
+		<javac destdir="${build.dir}" debug="${Debug}" deprecation="false" optimize="false" failonerror="true" encoding="UTF-8">
 
 			<src path="${src.test.dir}" />
 			<classpath>
 				<pathelement location="${build.dir}" />
 				<pathelement path="${velocity}" />
-				<pathelement location="${junit.lib}" />				
+				<pathelement location="${junit.lib}" />
+				<fileset refid="libs" />
 			</classpath>
 		</javac>
 		<mkdir dir="${build.reports.dir}/raw" />
@@ -226,11 +216,12 @@ For creation of the installer:
 			<classpath>
 				<pathelement location="${build.dir}" />
 				<pathelement path="${velocity}" />
+				<fileset refid="libs" />
 			</classpath>
 
 			<formatter type="xml" />
-			
-						
+
+
 			<batchtest fork="yes" todir="${build.reports.dir}/raw">
 				<fileset dir="${src.test.dir}">
 					<include name="**/*Test.java" />
@@ -238,45 +229,36 @@ For creation of the installer:
 			</batchtest>
 		</junit>
 		<junitreport todir="${build.reports.dir}">
-				  <fileset dir="${build.reports.dir}/raw/">
-				    <include name="TEST-*.xml"/>
-				  </fileset>
-				  <report format="frames" todir="${build.reports.dir}/html/"/>
-				</junitreport>
+			<fileset dir="${build.reports.dir}/raw/">
+				<include name="TEST-*.xml" />
+			</fileset>
+			<report format="frames" todir="${build.reports.dir}/html/" />
+		</junitreport>
 
-				<junitreport todir="${build.reports.dir}">
-				  <fileset dir="${build.reports.dir}/raw/">
-				    <include name="TEST-*.xml"/>
-				  </fileset>
-				  <report format="noframes" todir="${build.reports.dir}/htmlnoframes/"/>
-				</junitreport>
+		<junitreport todir="${build.reports.dir}">
+			<fileset dir="${build.reports.dir}/raw/">
+				<include name="TEST-*.xml" />
+			</fileset>
+			<report format="noframes" todir="${build.reports.dir}/htmlnoframes/" />
+		</junitreport>
 	</target>
-	
+
 	<!-- API Docs generation -->
-	<target name="api-docs" depends="compile"
-		description="Creates the API Documentation">
-		<javadoc
-			sourcepath="${main.src.dir}"
-			destdir="${javadoc.dir}"
-			access="${javadoc.access}"
-			author="true"
-			version="true"
-			use="true"
-			windowtitle="PowerFolder API Documentation"
-			Overview="${main.src.dir}/overview.html"
-		>
+	<target name="api-docs" depends="compile" description="Creates the API Documentation">
+		<javadoc sourcepath="${main.src.dir}" destdir="${javadoc.dir}" access="${javadoc.access}" author="true" version="true" use="true" windowtitle="PowerFolder API Documentation" Overview="${main.src.dir}/overview.html">
 			<classpath>
 				<pathelement location="${build.dir}" />
 				<pathelement path="${velocity}" />
 			</classpath>
-			
+
 			<packageset dir="${main.src.dir}" defaultexcludes="yes">
-		      <include name="de/dal33t/*/**"/>
-		    </packageset>
-		
-			<doctitle><![CDATA[<h1>PowerFolder API Documentation</h1>]]></doctitle>
-			<!-- J2SE API. -->
-			<link href="http://java.sun.com/j2se/1.5.0/docs/api" />
-		</javadoc>
-	</target>
+				<include name="de/dal33t/*/**" />
+			</packageset>
+
+			<doctitle>
+				<![CDATA[<h1>PowerFolder API Documentation</h1>]]></doctitle>
+		<!-- J2SE API. -->
+		<link href="http://java.sun.com/j2se/1.5.0/docs/api" />
+	</javadoc>
+</target>
 </project>
