Send bug report button included

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+about.dialog.send_bug_report=Send Bug Report
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
