renamings to tabs, filename problemes dialog

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -65,7 +65,6 @@ addmodifierfriend.key=f
 addmodifierfriend.name=Add file Modifier to Friends
 
 chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
-chatpanel.chat_about=Chat about
 chatpanel.chat_with=Chat with
 chatpanel.member_connected_at_time={0} connected at {1}
 chatpanel.member_disconnected_at_time={0} disconnected at {1}
@@ -131,10 +130,6 @@ dialog.updatecheck.noUpdateAvailable=This version is up to date
 dialog.updatecheck.nothingNeverAsk=Nothing and Never ask again
 dialog.updatecheck.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
 dialog.updatecheck.title=Newer version available
-
-directorypanel.dropfile_duplicate_dialog.skipall=Skip All Duplicates
-directorypanel.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
-directorypanel.dropfile_duplicate_dialog.title=File exists
 
 disablesilentmode.description=Siletmode currently active, added/modified files won't be found. Press to full mode
 disablesilentmode.key=w
@@ -262,7 +257,7 @@ folderleave.dialog.title=Leave folder {0} ?
 folderleave.key=L
 folderleave.name=Leave folder
 
-folderpanel.hometab.choose_sync_profile=Choose synchronisation profile
+folderpanel.chattab.title=Chat
 folderpanel.hometab.folder_type=Folder type
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
@@ -276,12 +271,16 @@ folderpanel.hometab.synchronisation_percentage=Synchronisation percentage
 folderpanel.hometab.title=Home
 folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+available)
 folderpanel.hometab.total_size=Total size
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
+folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
+folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
 folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
 folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=Add
+folderpanel.settingstab.choose_sync_profile=Choose synchronisation profile
 folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
 folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
 folderpanel.settingstab.editbutton.description=Edit a pattern
