--- a/.classpath
+++ b/.classpath
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/jd3lib"/>
-	<classpathentry kind="src" path="src/etc"/>
-	<classpathentry kind="src" path="src/systray"/>
-	<classpathentry kind="src" path="src/jwf"/>
-	<classpathentry kind="src" path="src/test"/>
-	<classpathentry kind="src" path="src/main"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/junit.jar"/>
-	<classpathentry kind="lib" path="lib/commons-io-1.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-2.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/commons-cli-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/binding-1.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/forms-1.0.7.jar"/>
-	<classpathentry kind="lib" path="lib/looks-2.0.4.jar"/>
-	<classpathentry kind="lib" path="lib/validation-1.3.0.jar"/>
-	<classpathentry kind="lib" path="lib/uif_lite-2.0.4.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry path="src/jd3lib" kind="src"/>
+	<classpathentry path="src/etc" kind="src"/>
+	<classpathentry path="src/systray" kind="src"/>
+	<classpathentry path="src/jwf" kind="src"/>
+	<classpathentry path="src/test" kind="src"/>
+	<classpathentry path="src/main" kind="src"/>
+	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
+	<classpathentry path="lib/junit.jar" kind="lib"/>
+	<classpathentry path="lib/commons-io-1.2.jar" kind="lib"/>
+	<classpathentry path="lib/commons-lang-2.2.jar" kind="lib"/>
+	<classpathentry path="lib/commons-codec-1.3.jar" kind="lib"/>
+	<classpathentry path="lib/commons-cli-1.0.jar" kind="lib"/>
+	<classpathentry path="lib/binding-1.1.2.jar" kind="lib"/>
+	<classpathentry sourcepath="C:/JavaPrograms/jgoodies/forms-1.0.7/src" path="lib/forms-1.0.7.jar" kind="lib"/>
+	<classpathentry path="lib/looks-2.0.4.jar" kind="lib"/>
+	<classpathentry path="lib/validation-1.3.0.jar" kind="lib"/>
+	<classpathentry path="lib/uif_lite-2.0.4.jar" kind="lib"/>
+	<classpathentry path="bin" kind="output"/>
 </classpath>
