ui fixes and some i18n for #17

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -192,7 +192,15 @@ filelist.status.no_files_available_add_files_and_invite=No files available... ad
 filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
 filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
 
-filenameproblemhandler.solution=Solution
+filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+filenameproblem.dialog.solution=Solution
+filenameproblem.dialog.title=Filename problems detected
+filenameproblem.dialog.description=Filename problems detected, select for each file a solution
+filenameproblem.dialog.do_nothing=Do nothing
+filenameproblem.dialog.automatic_rename=Automatic rename
+filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
+filenameproblem.dialog.add_to_ignore=Add to ignore
+
 
 findfriends.description=Start searching for new friends
 findfriends.key=F
