#17 implemented, needs heavy tesing on linux with filenames that have problems...

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -194,8 +194,8 @@ filelist.status.no_files_available_yet_fetching_filelist=No files available yet.
 
 filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
 filenameproblem.dialog.solution=Solution
-filenameproblem.dialog.title=Filename problems detected
-filenameproblem.dialog.description=Filename problems detected, select for each file a solution
+filenameproblem.dialog.title=Filename problem(s) detected
+filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
 filenameproblem.dialog.do_nothing=Do nothing
 filenameproblem.dialog.automatic_rename=Automatic rename
 filenameproblem.dialog.automatic_rename.explained=removes invalid charaters and or adds "-1", or similair fixes to create a valid (unique) filename
