never ask again for #17

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -193,6 +193,8 @@ filelist.status.no_files_available_add_files_in_folder=No files available... Add
 filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
 
 filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
+filenameproblem.dialog.never_ask_this_again=Never ask this again
+filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
 filenameproblem.dialog.solution=Solution
 filenameproblem.dialog.title=Filename problem(s) detected
 filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
@@ -313,7 +315,7 @@ folderpanel.settingstab.removebutton.key=R
 folderpanel.settingstab.removebutton.name=Remove
 folderpanel.settingstab.title=Settings
 
-folderrepository.warnonclose.neveraskagain=Never ask this again. 
+folderrepository.warnonclose.neveraskagain=Never ask this again 
 folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 folderrepository.warnonclose.title=Continue Exit?
 
