Another part of the lan ip range thing. Still far from working.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -849,3 +849,5 @@ wizard.whattodo.openonlinedocumentation=Open Online Documentation
 wizard.whattodo.projectwork=Synchronize Project
 wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
+
+addressEditor.title=IP-Range
