First "working" version of the LANList.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -851,3 +851,4 @@ wizard.whattodo.syncpcs=Synchronize PCs
 wizard.whattodo.title=What do you want to do ?
 
 addressEditor.title=IP-Range
+addressEditor.parseerror=<html><body><i>Invalid address range format, valid inputs are:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</i></body></html>
