--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -823,11 +823,13 @@ wizard.projectsync.setupsync=Setup a project synchronisation
 wizard.projectsync.successjoin=You have successfully joined the project\!
 wizard.projectsync.takepartsync=Take part in a synchronisation
 wizard.projectsync.title=Project synchronization
-wizard.sendinvitations.create=To create one now, select the filename below
-wizard.sendinvitations.joinsync=Invitation files are required to join a synchronization
-wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people
-wizard.sendinvitations.passwdasfile=It is similar to a password, but stored as file
-wizard.sendinvitations.savefile=Save invitation file
+wizard.sendinvitations.joinsync=Invitation files are required to join a synchronization.
+wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people.
+wizard.sendinvitations.sendinvitation=Send invitation
+wizard.sendinvitations.savetofile=Save as file
+wizard.sendinvitations.sendbymail=Send by mail
+wizard.sendinvitations.offline=Not connected
+wizard.sendinvitations.overpf=Via PowerFolder now
 wizard.sendinvitations.title=Save invitation
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
